@@ -1,4 +1,14 @@
-Spamprobe is a fast, intelligent, automatic spam detector using Bayesian
-analysis of terms contained in emails. Works with procmail, maildrop or a
-similar tool to produce a complete server or client side spam filtering
-system.
+Spamprobe is a fast, intelligent, automatic spam detector using
+Bayesian analysis of terms contained in emails. Works with procmail,
+maildrop or a similar tool to produce a complete server or client side
+spam filtering system.
+
+Features:
+ * Spam detection using Bayesian analysis of terms contained in each
+   email.
+ * Automatically learns from incoming mails as they are
+   classified. Incorporates user's feedback to tailor classification to
+   each user's personal tastes.
+ * Analyzes image attachments to derive useful information from them.
+ * Natively supports mbox, MBX, and Maildir mail box formats.
+ * And many more..
