@@ -1,8 +1,8 @@
-# $NetBSD: options.mk,v 1.2 2005/12/05 23:55:11 rillig Exp $
+# $NetBSD: options.mk,v 1.3 2006/01/07 10:27:51 hubertf Exp $
 
 PKG_OPTIONS_VAR=		PKG_OPTIONS.spamprobe
-PKG_SUPPORTED_OPTIONS=		bdb
-PKG_SUGGESTED_OPTIONS=		bdb
+PKG_SUPPORTED_OPTIONS=		bdb gif
+PKG_SUGGESTED_OPTIONS=		gif
 
 .include "../../mk/bsd.options.mk"
 
@@ -12,3 +12,6 @@ BDB_ACCEPTED=           db4 # db3 db2 (not tested)
 CONFIGURE_ARGS+=        --with-db=${BDBBASE:Q}
 .endif
 
+.if !empty(PKG_OPTIONS:Mgif)
+.include "../../graphics/libungif/buildlink3.mk"
+.endif
