@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.12396 2006/01/07 06:47:54 schmonz Exp $
+$NetBSD: CHANGES,v 1.12397 2006/01/07 10:27:59 hubertf Exp $
 
 Changes to the packages collection and infrastructure in 2006:
 
@@ -144,3 +144,4 @@ Changes to the packages collection and infrastructure in 2006:
 	Updated www/cgic to 2.05 [adam 2006-01-06]
 	Updated pkgtools/pkg_comp to 1.25 [seb 2006-01-06]
 	Added databases/tinycdb version 0.75 [schmonz 2006-01-07]
+	Updated mail/spamprobe to 1.4 [hubertf 2006-01-07]
